<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.baxamoosa.helpwanted.ui.ViewJobPostActivity"
    tools:showIn="@layout/activity_view_job_post">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/poster_thumbnail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:src="@drawable/empty_photo" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/business_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/business_name"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/abc_text_size_medium_material" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/business_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/business_phone"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/abc_text_size_medium_material" />

            <TextView
                android:id="@+id/business_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/business_address"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/abc_text_size_medium_material" />

            <Button
                android:id="@+id/btn_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/colorPrimary"
                android:onClick="setFavorite"
                android:text="@string/favorite_button"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>