<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.baxamoosa.helpwanted.ui.AddEditJobActivity"
    tools:showIn="@layout/activity_add_edit_job">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/business_name"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/business_name"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/abc_text_size_medium_material" />

            <EditText
                android:id="@+id/edit_business_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:hint="enter name" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/business_email"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/business_email"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/abc_text_size_medium_material" />

            <EditText
                android:id="@+id/edit_business_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:ems="10"
                android:hint="enter email"
                android:inputType="textEmailAddress|textMultiLine" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/business_phone"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/business_phone"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/abc_text_size_medium_material" />

            <EditText
                android:id="@+id/edit_business_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:ems="10"
                android:hint="enter phone"
                android:inputType="phone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/business_address"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/business_address"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/abc_text_size_medium_material" />

            <EditText
                android:id="@+id/edit_business_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:autoText="false"
                android:ems="10"
                android:hint="enter address"
                android:inputType="textPostalAddress|textMultiLine"
                android:minHeight="@dimen/place_autocomplete_prediction_height"
                android:scrollHorizontally="false" />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/business_wage_rate"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/business_wage_rate"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/abc_text_size_medium_material" />

            <EditText
                android:id="@+id/edit_business_wage_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:ems="10"
                android:hint="enter wage rate"
                android:inputType="number" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_medium"
            android:background="@color/colorPrimaryDark"
            android:onClick="submitToDB"
            android:text="@string/post_job"
            android:textColor="@android:color/white" />
        <Button
            android:id="@+id/btn_placepicker"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_medium"
            android:background="@color/colorPrimary"
            android:onClick="selectNewPlace"
            android:text="@string/placepickerNewPlace"
            android:textColor="@android:color/white" />

    </LinearLayout>
</RelativeLayout>
